# BeginningCpp20

./: .clang-format  .gitignore  CMakeLists.txt  cpp20.code-workspace  readme.md  start.bat  vs code+vs2022编译包含模块程序的配置指引.md  附录A.md
Chapter1/: Ex1_01.cpp  Ex1_02.cpp  Ex2_01.cpp  Exer1_01.cpp  Exer1_02.cpp  Exer1_03.cpp  LearningNotes_Chapter1.md  test01.cpp  test2_02.cpp
Chapter10/: Ex10_01.cpp  Ex10_02.cpp  Ex10_03.cpp  Ex10_04.cpp  Ex10_3A.cpp  Exer10_01.cpp  Exer10_02.cpp  Exer10_03.cpp  Exer10_04.cpp  Exer10_05.cpp  Exer10_06.cpp  LearningNotes_Chapte10.md  Test10_01.cpp  Test10_02.cpp  Test10_03.cpp
Chapter11/: Ex11_06.cpp  LearningNotes_Chapte11.md  Test11_01.cpp  Test11_02.cpp  math.cppm
Chapter11/Ex11_01/: Ex11_01.cpp  Ex11_01.sln  Ex11_01.slnx  Ex11_01.vcxproj  Ex11_01.vcxproj.filters
Chapter11/Ex11_02/: Ex11_02.cpp  Ex11_02.slnx  Ex11_02.vcxproj  Ex11_02.vcxproj.filters  to_roman.cpp
Chapter11/Ex11_03/: Ex11_03.cpp  Ex11_03.sln  Ex11_03.vcxproj  Ex11_03.vcxproj.filters  from_roman.cpp  roman.ixx  to_roman.cpp
Chapter11/Ex11_03A/: Ex11_03A.sln  Ex11_03A.vcxproj  Ex11_03A.vcxproj.filters  from_roman.cpp  roman.from.ixx  roman.ixx  roman.to.ixx
Chapter11/Ex11_04/: Ex11_04.cpp  Ex11_04.sln  Ex11_04.vcxproj  Ex11_04.vcxproj.filters  from_roman.cpp  roman-internals.cpp  roman.ixx  to_roman.cpp
Chapter11/Ex11_05/: Ex11_05.cpp  Ex11_05.sln  Ex11_05.vcxproj  Ex11_05.vcxproj.filters  from_roman.cpp  roman-from.ixx  roman-internals.cpp  roman-to.ixx  roman.ixx
Chapter11/Ex11_06A/: Ex11_06A.cpp  Ex11_06A.sln  squaring.ixx  (+2 more)
Chapter12/: CMakeLists.txt  LearningNotes_Chapte12.md  Test12_02.cpp
Chapter12/Ex11_01/: roman.ixx
Chapter12/Ex12_01/: CMakeLists.txt  Ex12_01.cpp  math.cppm
Chapter2/: Ex2_02.cpp  Ex2_03.cpp  Ex2_04.cpp  Ex2_05.cpp  Ex2_06.cpp  Ex2_07.cpp  Exer2-01.cpp  Exer2_02.cpp  Exer2_03.cpp  Exer2_04.cpp  Exer2_05.cpp  Exer2_06.cpp  Exer2_07.cpp  LearningNotes_Chapter2.md  test2_03.cpp  test2_04.cpp  test2_05.cpp  test2_06.cpp  test2_07.cpp  test2_08.cpp  test2_09.cpp
Chapter3/: Ex3_01.cpp  Ex3_02.cpp  Ex3_03.cpp  Exer3_01.cpp  Exer3_02.cpp  Exer3_03.cpp  Exer3_04.cpp  Exer3_05.cpp  Exer3_06.cpp  Exer_06.cpp  LearningNotes_Chapter3.md  test3_01.cpp  test3_02.cpp  test3_03.cpp  test3_04.cpp  test3_05.cpp  test3_06.cpp
Chapter4/: Ex4_01.cpp  Ex4_02.cpp  Ex4_03.cpp  Ex4_04.cpp  Ex4_04A.cpp  Ex4_05.cpp  Ex4_06.cpp  Ex4_07.cpp  Ex4_08.cpp  Ex4_09.cpp  Ex4_09A.cpp  Exer4_01.cpp  Exer4_02.cpp  Exer4_03.cpp  Exer4_04.cpp  Exer4_05.cpp  Exer4_06.cpp  Exer4_07.cpp  Exer4_08.cpp  LearningNotes_Chapter4.md  test.cpp  test4_01.cpp  test4_02.cpp  test4_03.cpp  test4_04.cpp
Chapter5/: Ex5_01.cpp  Ex5_02.cpp  Ex5_03.cpp  Ex5_03A.cpp  Ex5_04.cpp  Ex5_04A.cpp  Ex5_05.cpp  Ex5_06.cpp  Ex5_07.cpp  Ex5_07A.cpp  Ex5_08.cpp  Ex5_09.cpp  Ex5_10.cpp  Ex5_11.cpp  Ex5_12.cpp  Ex5_12A.cpp  Ex5_13.cpp  Ex5_14.cpp  Ex5_15.cpp  Exer5_01.cpp  Exer5_02.cpp  Exer5_03.cpp  Exer5_04.cpp  Exer5_05.cpp  Exer5_06.cpp  Exer5_07.cpp  Exer5_08.cpp  LearningNotes_Chapter5.md  Test5_02.cpp  Test5_03.cpp
Chapter6/: Ex6_01.cpp  Ex6_02.cpp  Ex6_03.cpp  Ex6_04.cpp  Ex6_05.cpp  Ex6_06.cpp  Ex6_07.cpp  Exer6_01.cpp  Exer6_02.cpp  Exer6_03.cpp  Exer6_04.cpp  Exer6_05.cpp  Exer6_06.cpp  LearningNotes_Chapter6.md  Test7_01.cpp
Chapter7/: Ex7_01.cpp  Ex7_02.cpp  Ex7_03.cpp  Ex7_04.cpp  Ex7_05.cpp  Ex7_06.cpp  Ex7_07.cpp  Exer7_01.cpp  Exer7_02.cpp  Exer7_03.cpp  Exer7_04.cpp  Exer7_05.cpp  Exer7_06.cpp  Exer7_07.cpp  Exer7_08.cpp  Exer7_09.cpp  Exer7_11.cpp  Exer7_14.cpp  Exer7_15.CPP  LearningNotes_Chapter7.md  Test7_01.cpp  Test7_03.cpp  Test7_05.cpp  Test7_07.cpp  Test7_09.cpp  Test7_10.cpp  Test7_12.cpp  Test7_13.cpp  Test7_16.cpp  Test7_17.cpp  Test7_18.cpp  Test7_19.cpp  Text7_20.cpp
Chapter8/: Ex8_02.cpp  Ex8_03.cpp  Ex8_04.cpp  Ex8_05.cpp  Ex8_06.cpp  Ex8_07.cpp  Ex8_08.cpp  Ex8_09A.cpp  Ex8_09B.cpp  Ex8_09C.cpp  Ex8_10.cpp  Ex8_11.cpp  Ex8_12.cpp  Ex8_13.cpp  Ex8_14.cpp  Ex8_15.cpp  Ex8_16.cpp  Ex8_17  Ex8_17.cpp  Exer8_01.cpp  Exer8_02.cpp  Exer8_03.cpp  Exer8_04.cpp  Exer8_05.cpp  Exer8_06.cpp  Exer8_07.cpp  Exer8_08.cpp  Exer8_09.cpp  LearningNotes_Chapte8.md  Test8_01.cpp
Chapter9/: Ex9_01.cpp  Ex9_02.cpp  Ex9_03.cpp  Ex9_04.cpp  Exer9_01.cpp  Exer9_02.cpp  Exer9_03.cpp  Exer9_04.cpp  Exer9_05.cpp  Exer9_06.cpp  LearningNotes_Chapte9.md
Others/: markdown语法.md  vs code+vs2022编译包含模块程序的配置指引.md
(+57 files in other folders)
